testsuite/escript/classes/fail-super-reference.err
fail-super-reference.src:10:12: error: Cannot reference super() function.